--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <div class="berita-left">
             <div class="olahraga">
                 <h2>OLAHRAGA</h2>
+                <div class="line-accent"></div>
             </div>
             <div class="humaniora">
                 <h2>HUMANIORA</h2>
@@ -120,6 +121,7 @@
         </div>
         <div class="berita-beranda">
             <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
             <div class="berita-terbaru">
 
             </div>
@@ -142,6 +144,7 @@
         </div>
         <div class="iklan">
             <h2>KORAN DIGITAL</h2>
+            <div class="line-accent"></div>
             <div class="tagar">
                 <a href="harian.html">
                     <img src="image/EPAPER-LAMPUNG-POST-2024-01-01.webp" alt="img" class="epaper-image">
@@ -160,6 +163,7 @@
     </div>
     <div class="lampung">
         <h2>LAMPUNG</h2>
+        <div class="line-accent"></div>
         <div class="berita-terpopuler">
 
         </div>
