--- a/kategori/vidio/detail.bedah-tajuk.html
+++ b/kategori/vidio/detail.bedah-tajuk.html
@@ -52,7 +52,7 @@
                     <li><a href="../../microweb/stiab.html">STIAB</a></li>
                 </ul>
             </li>
-                        <li class="has-sub">
+            <li class="has-sub">
                 <a href="#">Kolom</a>
                 <ul class="sub-menu" id="kolom">
                     <li><a href="../opini.html">Opini</a></li>
@@ -72,7 +72,15 @@
                 </ul>
             </li>
             <li><a href="../teknologi.html">Teknologi</a></li>
-            <li><a href="#">Wawancara</a></li>
+            <li class="has-sub">
+                <a href="#">Ekonomi</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Bank Indonesia Lampung</a></li>
+                    <li><a href="../../microweb/bsi.html">Bank Syariah Indonesia</a></li>
+                    <li><a href="../../microweb/banklampung.html">Bank Lampung</a></li>
+                    <li><a href="../otomotif.html">Otomotif</a></li>
+                </ul>
+            </li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
