--- a/microweb/banklampung.html
+++ b/microweb/banklampung.html
@@ -109,9 +109,6 @@
             </ul>
         </div>
     </div>
-    <div class="bener">
-        <img src="../image/benner-ubl.gif" alt="img" class="gif-tekno">
-    </div>
     <div class="container-microweb">
         <div class="berita-microweb">
             <h2>BERITA TERKINI</h2>
@@ -122,12 +119,7 @@
             <div class="home">
 
             </div>
-            <div class="berita-ubl"></div>
             <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
-            <div class="ubl-buttom">
-                <div class="ubl-terbaru"></div>
-                <div class="ubl-lanjutan"></div>
-            </div>
         </div>
         <div class="iklan-parent">
             <h2>KORAN DIGITAL</h2>
@@ -158,12 +150,11 @@
                     9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jalan Soekarno-Hatta No.
                     108 Rajabasa, Bandar Lampung.</p>
             </div>
-
             <div class="footer-center">
                 <center>
-                    <h3>UNIVERSITAS BANDAR LAMPUNG</h3>
+                    <h3>BANK LAMPUNG</h3>
                 </center>
-                <img src="../image/logo-UBL-white.png" alt="image" class="logo-microweb">
+                <img src="../image/Logo Bank Lampung.png" alt="image" class="logo-microweb">
             </div>
         </div>
 
@@ -181,12 +172,9 @@
     </footer>
 
 
+    <script src="../js/banklampung/banklampung.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
-    <script src="../js/ubl/ubl.utama.js"></script>
-    <script src="../js/ubl/ubl.js"></script>
-    <script src="../js/ubl/ubl.terbaru.js"></script>
-    <script src="../js/ubl/ubl.lanjutan.js"></script>
     <script src="../keyfrem.js"></script>
 </body>
 
