--- a/microweb/bsi.html
+++ b/microweb/bsi.html
@@ -72,7 +72,15 @@
                 </ul>
             </li>
             <li><a href="../kategori/teknologi.html">Teknologi</a></li>
-            <li><a href="#">Wawancara</a></li>
+            <li class="has-sub">
+                <a href="#">Ekonomi</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Bank Indonesia Lampung</a></li>
+                    <li><a href="bsi.html">Bank Syariah Indonesia</a></li>
+                    <li><a href="banklampung.html">Bank Lampung</a></li>
+                    <li><a href="../kategori/otomotif.html">Otomotif</a></li>
+                </ul>
+            </li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
@@ -101,12 +109,13 @@
             </ul>
         </div>
     </div>
-    <div class="bener">
+    <!-- <div class="bener">
         <img src="../image/benner-ubl.gif" alt="img" class="gif-tekno">
-    </div>
+    </div> -->
     <div class="container-microweb">
         <div class="berita-microweb">
             <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
             <div class="berita-terbaru">
 
             </div>
@@ -151,9 +160,9 @@
 
             <div class="footer-center">
                 <center>
-                    <h3>UNIVERSITAS BANDAR LAMPUNG</h3>
+                    <h3>BANK SYARIAH INDONESIA</h3>
                 </center>
-                <img src="../image/logo-UBL-white.png" alt="image" class="logo-microweb">
+                <img src="../image/md-65571292f0011-bsi.png" alt="image" class="logo-microweb">
             </div>
         </div>
 
