--- a/microweb/stiab.html
+++ b/microweb/stiab.html
@@ -72,7 +72,15 @@
                 </ul>
             </li>
             <li><a href="../kategori/teknologi.html">Teknologi</a></li>
-            <li><a href="#">Wawancara</a></li>
+            <li class="has-sub">
+                <a href="#">Ekonomi</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Bank Indonesia Lampung</a></li>
+                    <li><a href="bsi.html">Bank Syariah Indonesia</a></li>
+                    <li><a href="banklampung.html">Bank Lampung</a></li>
+                    <li><a href="../kategori/otomotif.html">Otomotif</a></li>
+                </ul>
+            </li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
@@ -104,6 +112,7 @@
     <div class="container-microweb">
         <div class="berita-microweb">
             <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
             <div class="berita-terbaru">
 
             </div>
@@ -124,6 +133,7 @@
             </div>
             <div class="terbaru">
                 <h2>BERITA TERKINI</h2>
+                <div class="line-accent"></div>
                 <div class="stiab-terbaru"></div>
                 <div class="akademik"></div>
             </div>
