--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -72,7 +72,15 @@
                 </ul>
             </li>
             <li><a href="../kategori/teknologi.html">Teknologi</a></li>
-            <li><a href="#">Wawancara</a></li>
+            <li class="has-sub">
+                <a href="#">Ekonomi</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Bank Indonesia Lampung</a></li>
+                    <li><a href="bsi.html">Bank Syariah Indonesia</a></li>
+                    <li><a href="banklampung.html">Bank Lampung</a></li>
+                    <li><a href="../kategori/otomotif.html">Otomotif</a></li>
+                </ul>
+            </li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
@@ -107,6 +115,7 @@
     <div class="container-microweb">
         <div class="berita-microweb">
             <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
             <div class="berita-terbaru">
 
             </div>
@@ -115,6 +124,7 @@
             </div>
             <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
             <h2>PRESTASI MAHASISWA</h2>
+            <div class="line-accent"></div>
             <div class="prestasi">
                 <div class="prestasi-terbaru"></div>
                 <div class="prestasi-lanjutan"></div>
@@ -122,13 +132,15 @@
         </div>
         <div class="iklan-parent">
             <h2>KORAN DIGITAL</h2>
+            <div class="line-accent"></div>
             <div class="tagar">
                 <a href="../harian.html">
                     <img src="../image/epaper-unila.jpg" alt="img" class="epaper-image" id="epeper-microweb">
                 </a>
             </div>
+            <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
             <div class="terbaru">
-                <h2>BERITA TERKINI</h2>
             </div>
         </div>
     </div>
