--- a/kategori/otomotif.html
+++ b/kategori/otomotif.html
@@ -46,20 +46,20 @@
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
-                    <li><a href="teknokrat.html">Universitas Teknokrat Indonesia</a></li>
-                    <li><a href="unila.html">Universitas Lampung</a></li>
-                    <li><a href="ubl.html">UBL</a></li>
-                    <li><a href="stiab.html">STIAB</a></li>
+                    <li><a href="../microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="../microweb/unila.html">Universitas Lampung</a></li>
+                    <li><a href="../microweb/ubl.html">UBL</a></li>
+                    <li><a href="../microweb/stiab.html">STIAB</a></li>
                 </ul>
             </li>
             <li class="has-sub">
                 <a href="#">Kolom</a>
                 <ul class="sub-menu" id="kolom">
-                    <li><a href="../kategori/opini.html">Opini</a></li>
-                    <li><a href="../kategori/refleksi.html">Refleksi</a></li>
-                    <li><a href="../kategori/nuansa.html">Nuansa</a></li>
-                    <li><a href="../kategori/tajuk-lampung-post.html">Tajuk</a></li>
-                    <li><a href="../kategori/forum-guru.html">Forum Guru</a></li>
+                    <li><a href="opini.html">Opini</a></li>
+                    <li><a href="refleksi.html">Refleksi</a></li>
+                    <li><a href="nuansa.html">Nuansa</a></li>
+                    <li><a href="tajuk-lampung-post.html">Tajuk</a></li>
+                    <li><a href="forum-guru.html">Forum Guru</a></li>
                 </ul>
             </li>
             <li class="has-sub">
@@ -71,14 +71,14 @@
                     <li><a href="#">Podcast</a></li>
                 </ul>
             </li>
-            <li><a href="../kategori/teknologi.html">Teknologi</a></li>
+            <li><a href="teknologi.html">Teknologi</a></li>
             <li class="has-sub">
                 <a href="#">Ekonomi</a>
                 <ul class="sub-menu">
                     <li><a href="#">Bank Indonesia Lampung</a></li>
-                    <li><a href="bsi.html">Bank Syariah Indonesia</a></li>
-                    <li><a href="banklampung.html">Bank Lampung</a></li>
-                    <li><a href="../kategori/otomotif.html">Otomotif</a></li>
+                    <li><a href="../microweb/bsi.html">Bank Syariah Indonesia</a></li>
+                    <li><a href="../microweb/banklampung.html">Bank Lampung</a></li>
+                    <li><a href="otomotif.html">Otomotif</a></li>
                 </ul>
             </li>
             <li><a href="#">Investigasi</a></li>
@@ -109,9 +109,6 @@
             </ul>
         </div>
     </div>
-    <div class="bener">
-        <img src="../image/benner-ubl.gif" alt="img" class="gif-tekno">
-    </div>
     <div class="container-microweb">
         <div class="berita-microweb">
             <h2>BERITA TERKINI</h2>
@@ -122,11 +119,9 @@
             <div class="home">
 
             </div>
-            <div class="berita-ubl"></div>
             <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
-            <div class="ubl-buttom">
-                <div class="ubl-terbaru"></div>
-                <div class="ubl-lanjutan"></div>
+            <div class="Pendidikan">
+
             </div>
         </div>
         <div class="iklan-parent">
@@ -134,8 +129,12 @@
             <div class="line-accent"></div>
             <div class="tagar">
                 <a href="../harian.html">
-                    <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image" id="epeper-microweb">
+                    <img src="../image/showcase-350pxl2.gif" alt="img" class="epaper-image" id="epeper-microweb">
                 </a>
+            </div>
+            <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
+            <div class="terbaru">
             </div>
         </div>
     </div>
@@ -146,24 +145,24 @@
             <a href="https://x.com/lampungpost_"><i class="bi bi-twitter-x"></i></i>Twitter</a>
             <a href="https://www.tiktok.com/@lampungpost_official"><i class="bi bi-tiktok"></i>Tiktok</a>
         </div>
-        <div class="footer-microweb">
+        <div class="footer-container">
 
             <div class="footer-left">
                 <center>
-                    <h3>Affiliated with:</h3>
+                    <p>Affiliated with:</p>
+                    <img src="../image/media.webp" alt="Logo">
                 </center>
-                <img src="../image/lampost300.png (1).webp" alt="Logo">
-                <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Teknokrat
-                    Indonesia. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
-                    9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jalan Soekarno-Hatta No.
-                    108 Rajabasa, Bandar Lampung.</p>
             </div>
 
             <div class="footer-center">
-                <center>
-                    <h3>UNIVERSITAS BANDAR LAMPUNG</h3>
-                </center>
-                <img src="../image/logo-UBL-white.png" alt="image" class="logo-microweb">
+                <h4>Sitemap</h4>
+                <a href="#">Beranda</a>
+                <a href="#">Tentang Kami</a>
+                <a href="#">Compro</a>
+                <a href="#">Ilkan</a>
+                <a href="#">Microsite</a>
+                <a href="#">RRS</a>
+                <a href="#">Pedoman Media Siber</a>
             </div>
         </div>
 
@@ -179,15 +178,12 @@
             <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
-
-
-    <script src="../js/scrip.js"></script>
-    <script src="../js/navbar.js"></script>
-    <script src="../js/ubl/ubl.utama.js"></script>
-    <script src="../js/ubl/ubl.js"></script>
-    <script src="../js/ubl/ubl.terbaru.js"></script>
-    <script src="../js/ubl/ubl.lanjutan.js"></script>
-    <script src="../keyfrem.js"></script>
+        <script src="../js/kategori/otomotif.js"></script>
+        <script src="../js/kategori/terbaru.js"></script>
+        <script src="../js/beranda/detail.js"></script>
+        <script src="../js/scrip.js"></script>
+        <script src="../js/navbar.js"></script>
+        <script src="../keyfrem.js"></script>
 </body>
 
 </html>
