--- a/kategori/refleksi.html
+++ b/kategori/refleksi.html
@@ -72,7 +72,15 @@
                 </ul>
             </li>
             <li><a href="teknologi.html">Teknologi</a></li>
-            <li><a href="#">Wawancara</a></li>
+            <li class="has-sub">
+                <a href="#">Ekonomi</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Bank Indonesia Lampung</a></li>
+                    <li><a href="../microweb/bsi.html">Bank Syariah Indonesia</a></li>
+                    <li><a href="../microweb/banklampung.html">Bank Lampung</a></li>
+                    <li><a href="otomotif.html">Otomotif</a></li>
+                </ul>
+            </li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
@@ -104,6 +112,7 @@
     <div class="container-microweb">
         <div class="berita-microweb">
             <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
             <div class="berita-terbaru">
 
             </div>
@@ -117,13 +126,15 @@
         </div>
         <div class="iklan-parent">
             <h2>KORAN DIGITAL</h2>
+            <div class="line-accent"></div>
             <div class="tagar">
                 <a href="../harian.html">
                     <img src="../image/showcase-350pxl2.gif" alt="img" class="epaper-image" id="epeper-microweb">
                 </a>
             </div>
+            <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
             <div class="terbaru">
-                <h2>BERITA TERKINI</h2>
             </div>
         </div>
     </div>
