--- a/microweb/berita.teknokrat.html
+++ b/microweb/berita.teknokrat.html
@@ -72,7 +72,15 @@
                 </ul>
             </li>
             <li><a href="../kategori/teknologi.html">Teknologi</a></li>
-            <li><a href="#">Wawancara</a></li>
+            <li class="has-sub">
+                <a href="#">Ekonomi</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Bank Indonesia Lampung</a></li>
+                    <li><a href="bsi.html">Bank Syariah Indonesia</a></li>
+                    <li><a href="banklampung.html">Bank Lampung</a></li>
+                    <li><a href="../kategori/otomotif.html">Otomotif</a></li>
+                </ul>
+            </li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
