--- a/halaman.html
+++ b/halaman.html
@@ -41,7 +41,7 @@
     <!-- Navbar Sekunder -->
     <nav class="navbar-sub">
         <ul>
-            <li><a href="#">Politik</a></li>
+            <li><a href="kategori/olahraga/bola.html">Bola</a></li>
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
@@ -71,7 +71,15 @@
                 </ul>
             </li>
             <li><a href="kategori/teknologi.html">Teknologi</a></li>
-            <li><a href="#">Wawancara</a></li>
+            <li class="has-sub">
+                <a href="#">Ekonomi</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Bank Indonesia Lampung</a></li>
+                    <li><a href="microweb/bsi.html">Bank Syariah Indonesia</a></li>
+                    <li><a href="microweb/banklampung.html">Bank Lampung</a></li>
+                    <li><a href="kategori/otomotif.html">Otomotif</a></li>
+                </ul>
+            </li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
