--- a/kategori/vidio/detail.bedah-tajuk.html
+++ b/kategori/vidio/detail.bedah-tajuk.html
@@ -42,7 +42,7 @@
     <!-- Navbar Sekunder -->
     <nav class="navbar-sub">
         <ul>
-            <li><a href="#">Politik</a></li>
+            <li><a href="../olahraga/bola.html">Bola</a></li>
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
