--- a/halaman.html
+++ b/halaman.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="halaman.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="microweb.css">
     <link rel="icon" href="image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
@@ -123,22 +124,25 @@
             <img class="gambar-berita">
 
             <div class="isi-berita"></div>
+            <div class="home">
+                <h2>BERITA LAINNYA</h2>
+                <div class="line-accent"></div>
 
-            <a href="index.html" class="baca-selengkapnya">
-                Baca berita terkait lainnya
-            </a>
+            </div>
         </div>
 
 
-        <div class="iklan">
+        <div class="iklan-parent">
+            <h2>KORAN DIGITAL</h2>
+            <div class="line-accent"></div>
             <div class="tagar">
-                <h3>TOPIK TRENDING</h3>
-                <p>#Banjir Sumatra</p>
-                <p>#Muzakir Manaf</p>
-                <p>#Makan Bergizi Gratis</p>
-                <p>#Purbaya Yudhi Sadewa</p>
-                <p>#Akal ImitasiMuzakir Manaf</p>
-                <p>#Prabowo</p>
+                <a href="harian.html">
+                    <img src="image/showcase-350pxl2.gif" alt="img" class="epaper-image" id="epeper-microweb">
+                </a>
+            </div>
+            <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
+            <div class="terbaru">
             </div>
         </div>
     </div>
@@ -154,8 +158,8 @@
             <div class="footer-left">
                 <center>
                     <p>Affiliated with:</p>
+                    <img src="image/media.webp" alt="Logo">
                 </center>
-                <img src="image/media.webp" alt="Logo">
             </div>
 
             <div class="footer-center">
@@ -183,6 +187,8 @@
         </div>
     </footer>
     <script src="js/beranda/detail.js"></script>
+    <script src="js/terbaru.berita.js"></script>
+    <script src="js/berita.halaman.js"></script>
     <script src="js/voice.js"></script>
     <script src="js/scrip.js"></script>
     <script src="js/navbar.js"></script>
