--- a/halaman.html
+++ b/halaman.html
@@ -129,6 +129,7 @@
                 <div class="line-accent"></div>
 
             </div>
+            <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
         </div>
 
 
