--- a/microweb/berita.unila.html
+++ b/microweb/berita.unila.html
@@ -157,7 +157,7 @@
                 <center>
                     <h3>Affiliated with:</h3>
                 </center>
-                <img src="../image/lampost300.png (1).webp" alt="Logo">
+                <img src="../image/lampost300.png (1).webp" alt="Logo" id="microweb-img">
                 <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Teknokrat
                     Indonesia. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
                     9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jalan Soekarno-Hatta No.
