--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../microweb.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../beranda.css">
-    <link rel="stylesheet" href="../microweb.css">
     <link rel="icon" href="../image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
@@ -159,7 +159,7 @@
                 <center>
                     <h3>Affiliated with:</h3>
                 </center>
-                <img src="../image/lampost300.png (1).webp" alt="Logo">
+                <img src="../image/lampost300.png (1).webp" alt="Logo" id="microweb-img">
                 <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Teknokrat
                     Indonesia. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
                     9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jalan Soekarno-Hatta No.
