--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
         </div>
     </div>
     <div class="iklan-gambar">
+        <div class="hero-slider">
+  <div class="hero-track"></div>
+  <div class="hero-dots"></div>
+</div>
+
         <a href="#">
             <img src="image/ads_showcase.jpg" alt="img" class="gambar">
         </a>
@@ -169,6 +174,14 @@
             </div>
         </div>
     </div>
+    <div class="gaya-hidup">
+        <h2>GAYA HIDUP</h2>
+        <div class="line-accent"></div>
+        <div class="prestasi">
+            <div class="prestasi-terbaru"></div>
+            <div class="prestasi-lanjutan"></div>
+        </div>
+    </div>
     <div class="lampung">
         <h2>LAMPUNG</h2>
         <div class="line-accent"></div>
@@ -222,6 +235,9 @@
     <script src="js/scrip.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/beranda/olahraga.js"></script>
+    <script src="js/beranda/slider.js"></script>
+    <script src="js/beranda/gaya.hidup.utama.js"></script>
+    <script src="js/beranda/gaya.hidup.lanjutan.js"></script>
     <script src="js/beranda/scrip.js"></script>
     <script src="js/beranda/hiburan.js"></script>
     <script src="js/beranda/hukum.js"></script>
@@ -234,7 +250,7 @@
     <script src="js/beranda/teknologi.js"></script>
     <script src="keyfrem.js"></script>
 
-    
+
 </body>
 
 </html>
