ini tampilan aja

--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@
             </ul>
         </div>
     </div>
-    <div class="iklan-gambar">
+    <div class="slider">
         <div class="hero-slider">
-  <div class="hero-track"></div>
-  <div class="hero-dots"></div>
-</div>
-
+        <div class="hero-track"></div>
+        <div class="hero-dots"></div>
+    </div>
+    </div>
+    <div class="iklan-gambar">
         <a href="#">
             <img src="image/ads_showcase.jpg" alt="img" class="gambar">
         </a>
@@ -138,11 +139,6 @@
             <div class="berita-terbaru">
 
             </div>
-            <!-- <div class="iklan-showcase">
-                <a href="https://s.id/Lampostco">
-                    <img src="image/ads_showcase.jpg" alt="img" class="iklan-image">
-                </a>
-            </div> -->
             <div class="berita-mobile">
                 <h2>EKONOMI DAN BISNIS</h2>
                 <div class="ekonomi">
