ini tampilan aja

--- a/microweb/berita.teknokrat.html
+++ b/microweb/berita.teknokrat.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../halaman.css">
+    <link rel="stylesheet" href="../berita.microweb.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../image/logo.png" type="image/png">
     <link rel="stylesheet" href="../microweb.css">
@@ -131,15 +131,10 @@
         </div>
 
 
-        <div class="iklan">
-            <div class="tagar">
-                <h3>TOPIK TRENDING</h3>
-                <p>#Banjir Sumatra</p>
-                <p>#Muzakir Manaf</p>
-                <p>#Makan Bergizi Gratis</p>
-                <p>#Purbaya Yudhi Sadewa</p>
-                <p>#Akal ImitasiMuzakir Manaf</p>
-                <p>#Prabowo</p>
+        <div class="iklan-detail">
+            <h2>BERITA LAINNYA</h2>
+                <div class="line-accent"></div>
+            <div class="terbaru"></div>
             </div>
         </div>
     </div>
@@ -155,8 +150,8 @@
             <div class="footer-left">
                 <center>
                     <h3>Affiliated with:</h3>
+                    <img src="../image/lampost300.png (1).webp" alt="Logo" id="microweb-img">
                 </center>
-                <img src="../image/lampost300.png (1).webp" alt="Logo" id="microweb-img">
                 <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Teknokrat
                     Indonesia. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
                     9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jalan Soekarno-Hatta No.
@@ -184,6 +179,7 @@
         </div>
     </footer>
     <script src="../js/voice.js"></script>
+    <script src="../js/teknokrat/berita.terbaru.js"></script>
     <script src="../js/teknokrat/detail.teknokrat.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
