ini tampilan aja

--- a/index.html
+++ b/index.html
@@ -134,11 +134,14 @@
             </div>
         </div>
         <div class="berita-beranda">
-            <h2>BERITA TERKINI</h2>
+            <h2 >BERITA TERKINI</h2>
             <div class="line-accent"></div>
             <div class="berita-terbaru">
 
             </div>
+            <div class="info">
+            </div>
+            <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
             <div class="berita-mobile">
                 <h2>EKONOMI DAN BISNIS</h2>
                 <div class="ekonomi">
@@ -147,12 +150,9 @@
                     <h2>TEKNOLOGI</h2>
                 </div>
             </div>
-            <div class="info">
-            </div>
-            <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
         </div>
         <div class="iklan">
-            <h2>KORAN DIGITAL</h2>
+            <h2>E-PAPER</h2>
             <div class="line-accent"></div>
             <div class="tagar">
                 <a href="harian.html">
