ini tampilan aja

--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
 
         </div>
     </div>
+    <div class="populer-mobile">
+        <h2>OLAHRAGA & HIBURAN</h2>
+        <div class="line-accent"></div>
+    </div>
     <footer class="footer">
         <div class="sosmed">
             <a href="https://www.instagram.com/lampost.co/"><i class="bi bi-instagram"></i>Instagram</a>
@@ -242,6 +246,7 @@
     <script src="js/beranda/opini.js"></script>
     <script src="js/beranda/ekonomi.js"></script>
     <script src="js/beranda/teknologi.js"></script>
+    <script src="js/beranda/berita.bawah.js"></script>
     <script src="keyfrem.js"></script>
 
 
