ini tampilan aja

--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -109,6 +109,12 @@
             </ul>
         </div>
     </div>
+    <div class="slider-microweb">
+        <div class="hero-slider">
+            <div class="hero-track"></div>
+            <div class="hero-dots"></div>
+        </div>
+    </div>
     <div class="bener">
         <img src="../image/banner-tekno.gif" alt="img" class="gif-tekno">
     </div>
@@ -193,6 +199,7 @@
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
     <script src="../js/teknokrat/terbaru.js"></script>
+    <script src="../js/teknokrat/slider.js"></script>
     <script src="../keyfrem.js"></script>
 </body>
 
