ini tampilan aja

--- a/halaman.html
+++ b/halaman.html
@@ -133,7 +133,7 @@
         </div>
 
 
-        <div class="iklan-parent">
+        <div class="iklan-halaman">
             <h2>KORAN DIGITAL</h2>
             <div class="line-accent"></div>
             <div class="tagar">
