--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="info fade-in">
             </div>
             <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
-            <div class="berita-mobile">
+            <div class="berita-mobile fade-in">
                 <h2>EKONOMI DAN BISNIS</h2>
                 <div class="ekonomi fade-in">
                 </div>
@@ -200,7 +200,7 @@
     <div class="gaya-hidup fade-in">
         <h2>GAYA HIDUP</h2>
         <div class="line-accent"></div>
-        <div class="prestasi">
+        <div class="prestasi fade-in">
             <div class="prestasi-terbaru fade-in"></div>
             <div class="prestasi-lanjutan fade-in"></div>
         </div>
