--- a/microweb/berita.unila.html
+++ b/microweb/berita.unila.html
@@ -9,6 +9,7 @@
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../halaman.css">
+    <link rel="stylesheet" href="../berita.microweb.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../microweb.css">
     <link rel="icon" href="../image/logo.png" type="image/png">
@@ -132,15 +133,10 @@
         </div>
 
 
-        <div class="iklan">
-            <div class="tagar">
-                <h3>TOPIK TRENDING</h3>
-                <p>#Banjir Sumatra</p>
-                <p>#Muzakir Manaf</p>
-                <p>#Makan Bergizi Gratis</p>
-                <p>#Purbaya Yudhi Sadewa</p>
-                <p>#Akal ImitasiMuzakir Manaf</p>
-                <p>#Prabowo</p>
+        <div class="iklan-detail">
+            <h2>BERITA LAINNYA</h2>
+                <div class="line-accent"></div>
+            <div class="terbaru"></div>
             </div>
         </div>
     </div>
@@ -186,6 +182,7 @@
     </footer>
     <script src="../js/voice.js"></script>
     <script src="../js/unila/detail.unila.js"></script>
+    <script src="../js/unila/berita.terbaru.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
 </body>
