--- a/microweb/ubl.html
+++ b/microweb/ubl.html
@@ -109,6 +109,12 @@
             </ul>
         </div>
     </div>
+    <div class="slider-microweb">
+        <div class="hero-slider">
+            <div class="hero-track"></div>
+            <div class="hero-dots"></div>
+        </div>
+    </div>
     <div class="bener">
         <img src="../image/benner-ubl.gif" alt="img" class="gif-tekno">
     </div>
@@ -184,6 +190,7 @@
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
     <script src="../js/ubl/ubl.utama.js"></script>
+    <script src="../js/ubl/slider.js"></script>
     <script src="../js/ubl/ubl.js"></script>
     <script src="../js/ubl/ubl.terbaru.js"></script>
     <script src="../js/ubl/ubl.lanjutan.js"></script>
