--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -109,6 +109,12 @@
             </ul>
         </div>
     </div>
+    <div class="slider-microweb">
+        <div class="hero-slider">
+            <div class="hero-track"></div>
+            <div class="hero-dots"></div>
+        </div>
+    </div>
     <div class="bener">
         <img src="../image/unila-banner.gif" alt="img" class="gif-tekno">
     </div>
@@ -188,6 +194,7 @@
 
     <script src="../js/unila/unila.js"></script>
     <script src="../js/unila/unila.pendidikan.js"></script>
+    <script src="../js/unila/slider.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
     <script src="../js/unila/terbaru.js"></script>
