--- a/microweb/stiab.html
+++ b/microweb/stiab.html
@@ -109,6 +109,12 @@
             </ul>
         </div>
     </div>
+    <div class="slider-microweb">
+        <div class="hero-slider">
+            <div class="hero-track"></div>
+            <div class="hero-dots"></div>
+        </div>
+    </div>
     <div class="container-microweb">
         <div class="berita-microweb">
             <h2>BERITA TERKINI</h2>
@@ -183,6 +189,7 @@
 
     <script src="../js/STIAB/staiab.js"></script>
     <script src="../js/STIAB/stiab.utama.js"></script>
+    <script src="../js/STIAB/slider.js"></script>
     <script src="../js/STIAB/akademik.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
