--- a/kategori/vidio/detail.bedah-tajuk.html
+++ b/kategori/vidio/detail.bedah-tajuk.html
@@ -46,7 +46,7 @@
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
-                    <li><a href="../microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="../../microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
                     <li><a href="../../microweb/unila.html">Universitas Lampung</a></li>
                     <li><a href="../../microweb/ubl.html">UBL</a></li>
                     <li><a href="../../microweb/stiab.html">STIAB</a></li>
