--- a/kategori/olahraga/bola.html
+++ b/kategori/olahraga/bola.html
@@ -179,7 +179,7 @@
         </div>
     </footer>
         <script src="../../js/kategori/bola.js"></script>
-        <script src="../../js/kategori/terbaru.js"></script>
+        <script src="../../js/kategori/bola-baru.js"></script>
         <script src="../../js/beranda/detail.js"></script>
         <script src="../../js/scrip.js"></script>
         <script src="../../js/navbar.js"></script>
