ini tampilan aja

--- a/microweb/ubl.html
+++ b/microweb/ubl.html
@@ -116,7 +116,7 @@
         </div>
     </div>
     <div class="bener">
-        <img src="../image/unila-banner.gif" alt="img" class="gif-tekno">
+        <img src="../image/benner-ubl.gif" alt="img" class="gif-tekno">
     </div>
     <div class="container-microweb">
         <div class="berita-microweb">
@@ -137,7 +137,7 @@
             </div>
         </div>
         <div class="iklan-parent">
-            <h2>KORAN DIGITAL</h2>
+            <h2>EPAPER</h2>
             <div class="line-accent"></div>
             <div class="tagar">
                 <a href="../harian.html">
@@ -172,9 +172,9 @@
 
             <div class="footer-center">
                 <center>
-                    <h3>UNIVERSITAS LAMPUNG</h3>
+                    <h3>UNIVERSITAS BANDAR LAMPUNG</h3>
                 </center>
-                <img src="../image/logo_unila.png" alt="image" class="logo-microweb">
+                <img src="../image/logo-UBL-white.png" alt="image" class="logo-microweb">
             </div>
         </div>
 
@@ -192,13 +192,13 @@
     </footer>
 
 
-    <script src="../js/unila/unila.js"></script>
-    <script src="../js/unila/unila.pendidikan.js"></script>
-    <script src="../js/unila/slider.js"></script>
+    <script src="../js/ubl/ubl.js"></script>
+    <script src="../js/ubl/ubl.terbaru.js"></script>
+    <script src="../js/ubl/slider.js"></script>
+    <script src="../js/ubl/ubl.utama.js"></script>
+    <script src="../js/ubl/ubl.lanjutan.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
-    <script src="../js/unila/terbaru.js"></script>
-    <script src="../js/unila/pendidikan.lanjutan.js"></script>
     <script src="../keyfrem.js"></script>
 </body>
 
