--- a/index.html
+++ b/index.html
@@ -212,19 +212,32 @@
             </div>
         </div>
     </div>
-    <div class="gaya-hidup fade-in">
-        <h2>GAYA HIDUP</h2>
-        <div class="line-accent"></div>
-        <div class="prestasi fade-in">
-            <div class="prestasi-terbaru fade-in"></div>
-            <div class="prestasi-lanjutan fade-in"></div>
+    <div class="berita-dua fade-in">
+        <div class="gaya-hidup">
+            <h2>GAYA HIDUP</h2>
+            <div class="line-accent"></div>
+            <div class="prestasi fade-in">
+                <div class="prestasi-terbaru fade-in"></div>
+                <div class="prestasi-lanjutan fade-in"></div>
+            </div>
+        </div>
+        <div class="olahraga">
+            <div class="sport">
+                <h2>OLAHRAGA</h2>
+                <div class="line-accent"></div>
+            </div>
+            <div class="humaniora">
+                <h2>HUMANIORA</h2>
+            </div>
         </div>
     </div>
     <div class="lampung fade-in">
-        <h2>LAMPUNG</h2>
-        <div class="line-accent"></div>
-        <div class="berita-terpopuler fade-in">
+        <div class="lampung-populer">
+            <h2>LAMPUNG</h2>
+            <div class="line-accent"></div>
+            <div class="berita-terpopuler fade-in">
 
+            </div>
         </div>
     </div>
     <div class="populer-mobile fade-in">
@@ -237,17 +250,28 @@
             <a href="https://www.facebook.com/lampungpostupdate"><i class="bi bi-facebook"></i>Fecebook</a>
             <a href="https://x.com/lampungpost_"><i class="bi bi-twitter-x"></i></i>Twitter</a>
             <a href="https://www.tiktok.com/@lampungpost_official"><i class="bi bi-tiktok"></i>Tiktok</a>
+            <a href="https://www.youtube.com/@lampungpostupdate"><i class="bi bi-youtube"></i>Youtube</a>
         </div>
         <div class="footer-container">
 
             <div class="footer-left">
                 <center>
                     <p>Affiliated with:</p>
+                    <img src="image/media.webp" alt="Logo">
                 </center>
-                <img src="image/media.webp" alt="Logo">
             </div>
 
             <div class="footer-center">
+                <h4>Tentang Kami</h4>
+                <p>Alamat</p>
+                <p>Jl. Soekarno – Hatta No.108, Hajimena, Lampung Selatan</p>
+                <p>Email</p>
+                <p>redaksi@lampost.co</p>
+                <p>Telpon</p>
+                <p>(0721) 783693 (hunting), 773888 (redaksi)</p>
+            </div>
+
+            <div class="footer-right">
                 <h4>Sitemap</h4>
                 <a href="#">Beranda</a>
                 <a href="#">Tentang Kami</a>
@@ -261,14 +285,7 @@
 
         <!-- Footer bawah -->
         <div class="footer-bottom">
-            <h4>Tentang Kami</h4>
-            <p>Alamat</p>
-            <p>Jl. Soekarno – Hatta No.108, Hajimena, Lampung Selatan</p>
-            <p>Email</p>
-            <p>redaksi@lampost.co</p>
-            <p>Telpon</p>
-            <p>(0721) 783693 (hunting), 773888 (redaksi)</p>
-            <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
+            <small>© 2026 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
 
