--- a/microweb/berita.ubl.html
+++ b/microweb/berita.ubl.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../halaman.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../microweb.css">
+    <link rel="stylesheet" href="../berita.microweb.css">
     <link rel="icon" href="../image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
@@ -124,22 +125,13 @@
             <img class="gambar-berita">
 
             <div class="isi-berita"></div>
-
-            <a href="../index.html" class="baca-selengkapnya">
-                Baca berita terkait lainnya
-            </a>
         </div>
 
 
-        <div class="iklan">
-            <div class="tagar">
-                <h3>TOPIK TRENDING</h3>
-                <p>#Banjir Sumatra</p>
-                <p>#Muzakir Manaf</p>
-                <p>#Makan Bergizi Gratis</p>
-                <p>#Purbaya Yudhi Sadewa</p>
-                <p>#Akal ImitasiMuzakir Manaf</p>
-                <p>#Prabowo</p>
+        <div class="iklan-detail">
+            <h2>BERITA LAINNYA</h2>
+                <div class="line-accent"></div>
+            <div class="terbaru"></div>
             </div>
         </div>
     </div>
@@ -185,6 +177,7 @@
     </footer>
     <script src="../js/voice.js"></script>
     <script src="../js/ubl/detail.ubl.js"></script>
+    <script src="../js/ubl/berita.terbaru.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
 </body>
